# mlops-basic-v2

./: .gitignore  pyproject.toml  requirements.txt
.github/workflows/: cd.yml  ci-fast.yml  ci-full.yml  ci.yml
basic_mlops_v2.egg-info/: PKG-INFO  SOURCES.txt
notebooks/: eda_iris.ipynb
scripts/: train_smoke.py
src/: utils.py
tests/: test_utils.py
