[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "basic-mlops-v2"
version = "0.1.0"
requires-python = ">=3.8"

[tool.setuptools]
package-dir = {"" = "."}

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
line-length = 100
exclude = ["notebooks"]

[tool.ruff.lint]
select = ["E", "F", "I"]  # basic errors, pyflakes, import sorting